--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
